updated index.html and portfolio.html

--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
         <h2 style="color: black;font-family:Tangerine;font-size: 80px">What Our Clients Say</h2>
         <div class="testimonial">
             <img src="images/pexels-hardeep-17758677.jpg" alt="Client 1">
-            <p style="font-family:Tangerine;font-size: 40px">"This event was the best we've ever had!"</p>
-            <span style="font-family: Cormorant SC;">~Agastya</span>
+            <p style="font-family:Tangerine;font-size: 40px;color: rgb(0, 0, 0);">"This event was the best we've ever had!"</p>
+            <span style="font-family: Cormorant SC;color: rgb(0, 0, 0);">~Agastya</span>
         </div>
         <div class="testimonial">
             <img src="images/pexels-ogproductionz-17243573.jpg" alt="Client 2">
-            <p style="font-family: Tangerine; font-size: 40px;">"The team was exceptional, and everything went perfectly!"</p>
-            <span style="font-family: Cormorant SC;">~Swift</span>
+            <p style="font-family: Tangerine; font-size: 40px;color: rgb(0, 0, 0);">"The team was exceptional, and everything went perfectly!"</p>
+            <span style="font-family: Cormorant SC;color: rgb(0, 0, 0);">~Swift</span>
         </div>
     </section>
 
