--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact" style="width: 100%;height: 82.8vh;">
         <h2 style="font-family: 'Herr Von Muellerhoff', sans-serif;font-size: 50px;">Contact   Us</h2>
         <form id="contact-form">
             <input type="text" name="name" placeholder="Your Name" style="font-family: Cormorant SC;" required>
