--- a/contact.html
+++ b/contact.html
@@ -332,9 +332,9 @@
                     <h2 style="font-family: 'Herr Von Muellerhoff', sans-serif;color: aliceblue;">Let's Connect</h2>
                     <p style="font-family:Cormorant SC;color: aliceblue;padding-bottom: 20px;">We'd love to hear from you! Connect with us and share your thoughts, feedback, or questions on our social channels. We're always here to listen and engage!</p>
                     <div class="social-icons">
-                        <a href="https://pinterest.com" target="_blank"><img src="images/pinterest.svg" alt="Pinterest"></a>
-                        <a href="https://twitter.com" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="images/instagram.svg" alt="Instagram"></a>
+                        <a href="https://in.pinterest.com/ivoryluxe_/" target="_blank"><img src="images/pinterest.svg" alt="Pinterest"></a>
+                        <a href="https://x.com/ivoryluxe_" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a>
+                        <a href="https://www.instagram.com/ivory_luxe_/" target="_blank"><img src="images/instagram.svg" alt="Instagram"></a>
                     </div>
                 </div>
             </div>
@@ -350,68 +350,70 @@
             </video>
         </div>
 
+       
         <!-- Form Content -->
-        <div class="form-content" >
-            <h2 style="font-family: 'Herr Von Muellerhoff', sans-serif; color: rgb(211, 201, 201);text-align: center;">Contact Us</h2>
-            <form action="https://formsubmit.co/your-email@example.com" method="POST" style="font-family:Cormorant SC; color: rgb(211, 201, 201);">
-                <label for="source" style="font-family:Cormorant SC;">Where did you hear about us? *</label>
-                <input type="text" id="source" name="source" placeholder="Enter source" style="font-family:Cormorant SC;" required>
+        <div class="form-content">
+            <h2 style="font-family: 'Herr Von Muellerhoff', sans-serif; color: rgb(211, 201, 201); text-align: center;">Contact Us</h2>
+            <form action="https://formsubmit.co/birajitsaikia@gmail.com" method="POST" style="font-family: Cormorant SC; color: rgb(211, 201, 201);">
+                <label for="source" style="font-family: Cormorant SC;">Where did you hear about us? *</label>
+                <input type="text" id="source" name="source" placeholder="Enter source" style="font-family: Cormorant SC;" required>
 
-                <label for="email" style="font-family:Cormorant SC;">Email *</label>
-                <input type="email" id="email" name="email" placeholder="Enter email" style="font-family:Cormorant SC;" required>
+                <label for="email" style="font-family: Cormorant SC;">Email *</label>
+                <input type="email" id="email" name="email" placeholder="Enter email" style="font-family: Cormorant SC;" required>
 
-                <label for="first-name" style="font-family:Cormorant SC;">First Name *</label>
-                <input type="text" id="first-name" name="first-name" placeholder="Enter your first name" style="font-family:Cormorant SC;" required>
+                <label for="first-name" style="font-family: Cormorant SC;">First Name *</label>
+                <input type="text" id="first-name" name="first-name" placeholder="Enter your first name" style="font-family: Cormorant SC;" required>
 
-                <label for="last-name" style="font-family:Cormorant SC;">Last Name *</label>
-                <input type="text" id="last-name" name="last-name" placeholder="Enter your last name" style="font-family:Cormorant SC;" required>
+                <label for="last-name" style="font-family: Cormorant SC;">Last Name *</label>
+                <input type="text" id="last-name" name="last-name" placeholder="Enter your last name" style="font-family: Cormorant SC;" required>
 
-                <label for="phone" style="font-family:Cormorant SC;">Phone *</label>
-                <input type="tel" id="phone" name="phone" placeholder="Enter phone number" style="font-family:Cormorant SC;" required>
+                <label for="phone" style="font-family: Cormorant SC;">Phone *</label>
+                <input type="tel" id="phone" name="phone" placeholder="Enter phone number" style="font-family: Cormorant SC;" required>
 
-                <label for="reserved-venue" style="font-family:Cormorant SC;">Have you reserved a venue yet? *</label>
-                <input type="text" id="reserved-venue" name="reserved-venue" placeholder="Yes/No" style="font-family:Cormorant SC;" required>
+                <label for="reserved-venue" style="font-family: Cormorant SC;">Have you reserved a venue yet? *</label>
+                <input type="text" id="reserved-venue" name="reserved-venue" placeholder="Yes/No" style="font-family: Cormorant SC;" required>
 
-                <label for="event-date" style="font-family:Cormorant SC;">Event Date *</label>
-                <input type="date" id="event-date" name="event-date" style="font-family:Cormorant SC;" required>
+                <label for="event-date" style="font-family: Cormorant SC;">Event Date *</label>
+                <input type="date" id="event-date" name="event-date" style="font-family: Cormorant SC;" required>
 
-                <label for="venue-name" style="font-family:Cormorant SC;">Venue Name *</label>
-                <input type="text" id="venue-name" name="venue-name" placeholder="Venue name" style="font-family:Cormorant SC;" required>
+                <label for="venue-name" style="font-family: Cormorant SC;">Venue Name *</label>
+                <input type="text" id="venue-name" name="venue-name" placeholder="Venue name" style="font-family: Cormorant SC;" required>
 
-                <label for="venue-location" style="font-family:Cormorant SC;">Venue Location *</label>
-                <input type="text" id="venue-location" name="venue-location" placeholder="Venue location" style="font-family:Cormorant SC;" required>
+                <label for="venue-location" style="font-family: Cormorant SC;">Venue Location *</label>
+                <input type="text" id="venue-location" name="venue-location" placeholder="Venue location" style="font-family: Cormorant SC;" required>
 
-                <label for="city" style="font-family:Cormorant SC;">City *</label>
-                <input type="text" id="city" name="city" placeholder="Enter city" style="font-family:Cormorant SC;" required>
+                <label for="city" style="font-family: Cormorant SC;">City *</label>
+                <input type="text" id="city" name="city" placeholder="Enter city" style="font-family: Cormorant SC;" required>
 
-                <label for="state" style="font-family:Cormorant SC;">State/Province *</label>
-                <input type="text" id="state" name="state" placeholder="Enter state/province" style="font-family:Cormorant SC;" required>
+                <label for="state" style="font-family: Cormorant SC;">State/Province *</label>
+                <input type="text" id="state" name="state" placeholder="Enter state/province" style="font-family: Cormorant SC;" required>
 
-                <label for="celebration" style="font-family:Cormorant SC;">What are you celebrating? *</label>
-                <select id="celebration" name="celebration" style="font-family:Cormorant SC;" required>
-                    <option value="wedding" style="font-family:Cormorant SC;">Wedding</option>
-                    <option value="party" style="font-family:Cormorant SC;">Party/Social Event</option>
-                    <option value="corporate" style="font-family:Cormorant SC;">Corporate Event</option>
-                    <option value="public" style="font-family:Cormorant SC;">Public Event</option>
+                <label for="celebration" style="font-family: Cormorant SC;">What are you celebrating? *</label>
+                <select id="celebration" name="celebration" style="font-family: Cormorant SC;" required>
+                    <option value="wedding" style="font-family: Cormorant SC;">Wedding</option>
+                    <option value="party" style="font-family: Cormorant SC;">Party/Social Event</option>
+                    <option value="corporate" style="font-family: Cormorant SC;">Corporate Event</option>
+                    <option value="public" style="font-family: Cormorant SC;">Public Event</option>
                 </select><br><br>
 
-                <label for="guests" style="font-family:Cormorant SC;">How many guests are you wanting to party with? *</label>
-                <input type="number" id="guests" name="guests" placeholder="Number of guests" style="font-family:Cormorant SC;" required>
+                <label for="guests" style="font-family: Cormorant SC;">How many guests are you wanting to party with? *</label>
+                <input type="number" id="guests" name="guests" placeholder="Number of guests" style="font-family: Cormorant SC;" required>
 
-                <label for="additional-service" style="font-family:Cormorant SC;">What additional service are you interested in?</label>
-                <select id="additional-service" name="additional-service" style="font-family:Cormorant SC;">
+                <label for="additional-service" style="font-family: Cormorant SC;">What additional service are you interested in?</label>
+                <select id="additional-service" name="additional-service" style="font-family: Cormorant SC;">
                     <option value="rehearsal-dinner">Rehearsal Dinner Planning</option>
                     <option value="end-of-night">End of Night Pack + Breakdown of My Event</option>
                     <option value="post-event-farewell">Post Event Farewell</option>
                     <option value="pre-event-welcome">Pre-event Welcome Event</option>
                 </select><br><br>
 
-                <label for="message" style="font-family:Cormorant SC;">Tell us how we can help you most. (Message) *</label>
-                <textarea id="message" name="message" placeholder="Your message" style="font-family:Cormorant SC;" required></textarea>
+                <label for="message" style="font-family: Cormorant SC;">Tell us how we can help you most. (Message) *</label>
+                <textarea id="message" name="message" placeholder="Your message" style="font-family: Cormorant SC;" required></textarea>
 
-                <button type="submit" style="font-family:Cormorant SC; display: block; margin: 0 auto; text-align: center;background-color: rgba(240, 255, 255, 0.05);">Submit</button>
+                <button type="submit" style="font-family: Cormorant SC; display: block; margin: 0 auto; text-align: center; background-color: rgba(240, 255, 255, 0.05);">Submit</button>
             </form>
         </div>
+
     </section>
 
 
@@ -430,7 +432,7 @@
             <div class="appointment-text" style="color: #e0d2d2; padding-left: 100px;">
                 <h2 style="font-family:Tangerine;">Never Done an Appointment Before?</h2>
                 <p style="font-family:Cormorant SC;">Click below to learn more about our services and how we can help make your event unforgettable.</p>
-                <a href="#services" class="cta-link" style="font-family:Cormorant SC ;background-color: #fff;color: #333;margin-left: 280px;">Explore Services</a>
+                <a href="services.html" class="cta-link" style="font-family:Cormorant SC ;background-color: #fff;color: #333;margin-left: 280px;">Explore Services</a>
             </div>
         </div>
     </section>
