updated bugs fixes

--- a/testimonials.html
+++ b/testimonials.html
@@ -370,7 +370,7 @@
         </div>
     </section>
 
-    <section style="width: 100%;height: auto;background-image: url();">
+    <section style="width: 100%;height: auto;">
         <div class="testimonial-section submit-section" style="position: relative; overflow: hidden;">
         
             <!-- Testimonial Form Section -->
