--- a/about.html
+++ b/about.html
@@ -23,14 +23,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <style>
-        /* Basic Reset */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
 
-        /* Global Styles */
+ 
         body {
             font-family: 'Poppins', sans-serif;
             background-color: rgba(236, 236, 234, 0.943);
@@ -38,7 +37,7 @@
             overflow-x: hidden;
         }
 
-        /* Navbar */
+
         .navbar {
             display: flex;
             justify-content: space-between;
@@ -56,7 +55,7 @@
         .navbar a {
             text-decoration: none;
         }
-        /* Animation for the gradient */
+
         @keyframes navbargradientAnimation {
             0% {
                 background-position: 0% 50%;
@@ -95,7 +94,7 @@
             color: #f1c40f;
         }
 
-        /* Parallax effect */
+
         .parallax {
             background-image: url('images/aboutparallax.jpg');
             height: 100vh;
@@ -116,7 +115,6 @@
             font-family: 'Herr Von Muellerhoff', sans-serif;
         }
 
-        /* About Section */
         .about {
             padding: 60px 20px;
             background-color: #fff;
@@ -143,14 +141,14 @@
             align-items: center;
             gap: 20px;
         }
-        /* Initial state for scroll animation */
+
         .section {
             opacity: 0;
             transform: translateY(50px);
             transition: all 0.6s ease-out;
         }
 
-        /* Visible state when scrolled into view */
+
         .section.visible {
             opacity: 1;
             transform: translateY(0);
@@ -176,12 +174,12 @@
             text-align: left;
         }
         .social-logo {
-        width: 30px; /* Adjust to your preferred size */
-        height: auto; /* Maintain aspect ratio */
-        margin-right: 10px; /* Space between image and text */
+        width: 30px; 
+        height: auto; 
+        margin-right: 10px; 
         }
 
-        /* Typing Animation */
+
         .typing-animation {
             font-family: 'Tangerine', serif;
             font-size: 3rem;
@@ -207,7 +205,7 @@
             }
         }
 
-        /* Footer Styling */
+
         footer {
             background-color: #333;
             color: white;
@@ -230,7 +228,7 @@
             }
         }
 
-        /* Random Image Layout */
+
         .slider-container {
             display: flex;
             gap: 10px;
@@ -259,7 +257,7 @@
     </style>
 </head>
 <body>
-    <!-- Header -->
+
     <header class="header">
         <nav class="navbar">
             <div class="logo">
@@ -276,12 +274,12 @@
         </nav>
     </header>
 
-    <!-- Parallax Effect Section -->
+
     <section class="parallax">
         <h2 style="font-family: 'Herr Von Muellerhoff', sans-serif;color:rgb(30, 32, 35);font-size: 100px;">About Us</h2>
     </section>
 
-    <!-- About Us Section with Vision, Mission, Values -->
+
     <section id="about" class="about">
         <h2 style="font-family:Tangerine;font-size: 80px">Our Story</h2>
         <div class="about-content">
@@ -309,7 +307,7 @@
         </div>
     </section>
 
-    <!-- Social Media Typing Animation -->
+
     <section class="social-media">
         <div class="typing-animation" style="color: #333; font-family: cursive; font-size: 30px;">
             <span class="social-item">
@@ -324,7 +322,7 @@
         </div>
     </section>
     
-    <!-- Footer -->
+
     <footer>
         <p style="font-family: Vollkorn;">&copy; 2024 Ivory Luxe | All Rights Reserved</p>
     </footer>
