--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <a href="services.html" class="service-card-link">
         <div class="service-card" style="font-family: Cormorant SC; font-size: 100px;">
             <h3>Catering</h3>
-            <p style="font-size: 120px;">Delicious food to make your event even more memorable.</p>
+            <p style="font-size: 120px;">Delicious food to make your event even more memorable</p>
             <img src="images/i15.png" alt="Catering">
         </div>
     </a>
