--- a/testimonials.html
+++ b/testimonials.html
@@ -93,7 +93,7 @@
         }
 
         .testimonial-card {
-            background: rgba(0, 0, 0, 0.39);
+            background: rgba(0, 0, 0, 0.742);
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -289,7 +289,7 @@
     </section>
 
 
-    <section style="padding-top:30px ;background-image: url('images/WhatsApp\ Image\ 2024-12-10\ at\ 9.19.14\ PM.jpeg');">
+    <section style="padding-top:30px ;background-image: url('images/WhatsApp Image 2024-12-10 at 11.46.03 PM.jpeg">
         <div class="testimonial-section">
             <h2  style="font-family: 'Herr Von Muellerhoff', sans-serif;font-size: 60px;">Weddings</h2>
             <div class="testimonial-grid">
@@ -316,7 +316,7 @@
     </section>
 
 
-    <section style="background-image: url('images/WhatsApp\ Image\ 2024-12-10\ at\ 9.19.14\ PM.jpeg');">
+    <section style="background-image: url('images/WhatsApp Image 2024-12-10 at 11.56.38 PM.jpeg');">
         <div class="testimonial-section">
             <h2 style="font-family: 'Herr Von Muellerhoff', sans-serif;font-size: 60px;">Corporate Events</h2>
             <div class="testimonial-grid">
@@ -343,7 +343,7 @@
     </section>
 
 
-    <section style="background-image: url('images/WhatsApp\ Image\ 2024-12-10\ at\ 9.19.14\ PM.jpeg');">
+    <section style="background-image: url('images/WhatsApp Image 2024-12-10 at 11.56.38 PM.jpeg');">
         <div class="testimonial-section">
             <h2 style="font-family: 'Herr Von Muellerhoff', sans-serif;font-size: 60px;">Parties</h2>
             <div class="testimonial-grid">
@@ -369,17 +369,17 @@
         </div>
     </section>
 
-    <section style="width: 100%;height: auto;">
+    <section style="width: 100%;height: auto;background-image:url('images/WhatsApp Image 2024-12-10 at 11.55.30 PM.jpeg') ;">
         <div class="testimonial-section submit-section" style="position: relative; overflow: hidden;">
         
 
             <div class="form-container" style="font-family: Cormorant SC; background: rgba(255, 255, 255, 0.075); padding: 20px; border-radius: 8px;">
-                <h2 style="font-family: 'Herr Von Muellerhoff', sans-serif; font-size: 60px;color: rgb(0, 0, 0);">Submit Your Testimonial</h2>
+                <h2 style="font-family: 'Herr Von Muellerhoff', sans-serif; font-size: 60px;color: rgb(255, 255, 255);">Submit Your Testimonial</h2>
                 <form id="testimonialForm" style="width: 500px; height: 500px;" action="https://formsubmit.co/birajitsaikia@gmail.com" method="POST" onsubmit="showSuccessMessage(event)">
-                    <label for="review" style="color: rgb(0, 0, 0);">Your Review:</label>
+                    <label for="review" style="color: rgb(235, 235, 235);">Your Review:</label>
                     <textarea id="review" name="review" rows="4" placeholder="Write your review here..." style="font-family: Cormorant SC;" required></textarea>
         
-                    <label for="rating" style="color: #000000;font-weight: bolder;">Your Rating:</label>
+                    <label for="rating" style="color: #f0ebeb;font-weight: bolder;">Your Rating:</label>
                     <div id="rating">
                         <span class="star" data-value="1">★</span>
                         <span class="star" data-value="2">★</span>
