added animated thank you vide

--- a/about.html
+++ b/about.html
@@ -321,6 +321,15 @@
             </span>
         </div>
     </section>
+
+    <section class="thank-you" style="text-align: center; padding: 40px; background-color: #f4f4f4; color: #333;">
+        <p style="font-size: 24px; font-family: 'Cormorant SC', serif; margin-bottom: 20px;">Thanks for visiting our website!</p>
+        <p style="font-size: 18px; font-family: 'Cormorant SC', serif;">This is a small gift from us...</p>
+        <a href="https://admirable-travesseiro-1f22a6.netlify.app/" style="display: inline-block; padding: 10px 20px; margin-top: 20px; background-color: #333; color: #fff; text-decoration: none; font-family: 'Cormorant SC', serif; font-size: 18px; border-radius: 5px;">
+            Go to Thank You Page
+        </a>
+    </section>
+    
     
 
     <footer>
